weather-app/style.css
body {
    background: #8C52FF;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
    margin: 0;
}

#weather-container {
    background: rgba(255, 255, 255, 0.3);
    max-width: 400px;
    padding: 20px;
    border-radius: 15px;
    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(10px);
    border: 1px solid rgba(255, 255, 255, 0.1);
    text-align: center;
}

h2,
label,
p {
    color: #fff;
    margin: 8px 0;
}

/* the search div align nput and button in row */
.search {
    display: flex;
    align-items: center;
    /* Center items vertically */
    border-radius: 5px;
    padding: 5px;
    width: 300px;
    margin: 20px auto;
    gap: 10px;
}

.search input {
    width: calc(100% - 16px);
    padding: 10px;
    box-sizing: border-box;
    border-radius: 10px;
    border: 1px solid white;
    background: #debff4;
    /* margin-top: 20px; */
    text-align: center;
}

.search button {
    background: #debff4;
    color: white;
    padding: 6px;
    border: 1px solid white;
    border-radius: 10px;
    cursor: pointer;
    /* margin-top: 20px; */
    font-size: 15px;
}

button:hover {
    background: #8b48d7;
}

#temp-div {
    font-size: xx-large;
    margin-top: -30px;
}

#weather-info {
    font-size: xx-large;
    margin-bottom: -30px;
}

#weather-icon {
    width: 200px;
    height: 200px;
    margin: 0 auto 10px;
    margin-bottom: 0;
    /*  padding for stop overriding text when no icon... when get the icon the pading will changed to 0 using js */
    padding: 50px;
    /* display: none; */
}

.stack {
    color: white;
    /* background-color: #8b48d7; */
    border-radius: 20px;
}

#humidity,
#wind-speed,
#pressure {
    padding-top: 5px;
    font-size: x-large;
}

/* details for airpressure humidity and wind speed */
.details {
    color: white;
    background-color: #8b48d799;
    border-radius: 20px;
    padding-top: 20px;
    margin-top: 20px;
    padding-bottom: 20px;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}

/* align each content img text and unit in column  */
.vertical {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

/* hourly forcast related ... not done */

#hourly-forecast {
    margin-top: 50px;
    overflow-x: auto;
    white-space: nowrap;
    display: flex;
    justify-content: space-between;
}

.hourly-item {
    flex: 0 0 auto;
    width: 80px;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-right: 10px;
    color: white;
}

.hourly-item img {
    width: 30px;
    height: 30px;
    margin-bottom: 5px;
}

#hourly-heading {
    color: #fff;
    margin-top: 10px;
}

